hphp/hack/test/sound_dynamic/typing/interfaces_1.bad.php.exp
File "interfaces_1.bad.php", line 10, characters 7-7:
Class `D` must declare <<__SupportDynamicType>> because it implements interface `I` which does (Typing[4402])
